# Berkeley-Humanoid-Lite-Lowlevel

./: README.md  pyproject.toml  setup.py
berkeley_humanoid_lite_lowlevel/motor/: configure_parameter.py  ping.py  read_configurations.py
berkeley_humanoid_lite_lowlevel/policy/: gamepad.py  policy_runner.py  rl_controller.py  rl_controller_lilgreen.py  udp_joystick.py
berkeley_humanoid_lite_lowlevel/recoil/: __init__.py  can.py  core.py  fixed16.py  udp.py  util.py
berkeley_humanoid_lite_lowlevel/robot/: anyonehere.py  bimanual.py  calibrate_joints.py  check_connection.py  humanoid.py  read_configurations.py  robot.py  write_configurations.py
csrc/: consts.h  real_humanoid.cpp  real_humanoid.h
scripts/: calibrate_joints.py  check_connection.py  run_idle.py  run_locomotion.py  test_inference.py  test_joystick.py
scripts/motor/: calibrate_electrical_offset.py  configure_parameter.py  move_actuator.py  ping.py  read_configurations.py
scripts/robot/: read_configurations.py  write_configurations.py
