[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "berkeley_humanoid_lite_lowlevel"
version = "2025.05.28"
description = "Low-level control for Berkeley Humanoid Lite"
authors = [
    { name = "Berkeley Humanoid Project Developers" },
    { name = "-T.K.-" },
]
maintainers = [
    { name = "Berkeley Humanoid Project Developers" },
    { name = "-T.K.-" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["robotics", "lowlevel"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "psutil",
]

[project.urls]
repository = "https://github.com/HybridRobotics/Berkeley-Humanoid-Lite-Lowlevel"

[tool.setuptools]
packages = ["berkeley_humanoid_lite_lowlevel"]
zip-safe = false
